<resources>
    <string name="app_name">Bantay Bakuna</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="already_registered_click_here">Already Registered? Click here.</string>
    <string name="new_here_create_account">New here? Create Account.</string>
    <string name="bantay_bakuna_title" />
    <string name="login">Login</string>
    <string name="you_are_in">YOU ARE IN</string>
    <string name="signout">SignOut</string>
    <string name="bnty">TODO</string>
    <string name="bntyy">TODO</string>
    <string name="bantay_bakuna">Bantay! Bakuna</string>
    <string name="home">Home</string>
    <string name="add_child">Add Child</string>
    <string name="add_here">Add here</string>
    <string name="childphoto">childphoto</string>
    <string name="home_">Home</string>
    <string name="messages_">Messages</string>
    <string name="notifications_">Notifications</string>
    <string name="user_">User</string>
    <string name="select_dob_hint">Select Date of Birth</string>
    <string name="child_s_full_name">Child\'s Full Name</string>
    <string name="pick_birth_date">Pick Birth Date</string>
    <string name="save_child">Save Child</string>
    <string name="add_new_child">Add New Child</string>
    <string name="delete_child">Delete Child</string>
    <string name="add_child_">Add Child</string>
    <string name="child_list_description">List of added children</string>
    <string name="add_child_icon_desc">addicondesc\n</string>
        <string name="select_date_administered_hint">Select Date Administered</string>
        <string name="pick_date_button">Pick Date</string>
    <string name="vaccine_icon_desc" />
    <string name="profile_picture_placeholder">Profile picture placeholder</string>
    <string name="display_name">Display Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="logout_sign_out">Logout / Sign Out</string>
    <string name="email_cannot_change">Email (Cannot Change)</string>
    <string name="save_profile_changes">Save Profile Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification_channel_name">Vaccine Reminders</string>
    <string name="notification_channel_description">Notifications for upcoming scheduled vaccinations</string>
    <string name="vaccine_name">Vaccine Name: *</string>
    <string name="date_administered_scheduled">Date Administered / Scheduled: *</string>
    <string name="time_optional">Time (Optional):</string>
    <string name="pick_time">Pick Time</string>
    <string name="test_notif">TEST NOTIF</string>
    <string name="delete_vaccine_log_desc" />
    <string name="view_vaccine_history">View Vaccine History</string>
    <string name="delete_this_child_record">Delete This Child Record</string>
    <string name="view_vaccine_status_summary">View Vaccine Status Summary</string>
    <string name="log_new_vaccine_schedule">Log New Vaccine / Schedule</string>
</resources>


