<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEF3E0"     tools:context=".AddChildActivity">



    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarAddChild"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#CD7B4C"         app:title=""
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/textViewAppTitleLarge"             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"             android:layout_marginBottom="24dp"             android:fontFamily="@font/jua"
            android:text="@string/bantay_bakuna"
            android:textColor="#6D4C41"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/editTextChildName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/child_s_full_name"
            android:inputType="textPersonName|textCapWords"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:backgroundTint="#A1887F" android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textViewSelectedDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/common_google_signin_btn_text_light_normal_background"
            android:hint="@string/select_dob_hint"
            android:padding="16dp"
            android:textColor="#6D4C41"
            android:textColorHint="#757575"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_birth_date"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="#FF7751"             android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/buttonSaveChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_child"
            android:textSize="18sp"
            android:padding="12dp"
            app:backgroundTint="#5188FF"
            tools:ignore="VisualLintButtonSize" />


    </LinearLayout>


</LinearLayout>