<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF3E0"
    android:padding="0dp"
    tools:context=".ChildDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarChildDetail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#CD7B4C"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Display2"
            app:title="Child Details"
            app:titleTextColor="#FFEACE" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textViewDetailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#5F473B"
                android:layout_marginBottom="8dp"
                tools:text="Child's Full Name Display" />

            <TextView
                android:id="@+id/textViewDetailAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="#8D6E63"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck"
                tools:text="Calculated Age" />

            <TextView
                android:id="@+id/textViewDetailDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textColor="#8D6E63"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck"
                tools:text="Date of Birth: Formatted Date" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D7CCC8"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/buttonGoToLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/log_new_vaccine_schedule"
                app:backgroundTint="#F7977C"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonGoToHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/view_vaccine_history"
                app:backgroundTint="#E0886E"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonGoToSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/view_vaccine_status_summary"
                app:backgroundTint="#DA6848"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonDeleteThisChild"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_this_child_record"
                android:textColor="#FFFFFF"
                app:backgroundTint="#D52200"
                app:strokeColor="#BB5858" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>